# lotr-mod-discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  database_structure.sql  fly.toml
.cargo/: config.toml
.github/workflows/: fly.yml  rust.yml
docs/: index.html
docs/assets/css/: icons.css  style.css
docs/assets/fonts/: icomoon.eot
src/: announcement.rs  check.rs  checks.rs  constants.rs  database.rs  event_handler.rs  fandom.rs  help.rs  main.rs  qa_answers.rs  role_cache.rs  user_data.rs  utils.rs
src/api/: curseforge.rs  google.rs  minecraft.rs  mod.rs  structures.rs  wiki.rs
src/api/wiki/: mod.rs  structures.rs
src/commands/: admin.rs  announcements.rs  bug_reports.rs  curseforge.rs  custom_commands.rs  general.rs  help.rs  meme.rs  minecraft.rs  mod.rs  qa_setup.rs  roles.rs  servers.rs  wiki.rs
src/database/: admin.rs  admin_data.rs  blacklist.rs  bug_reports.rs  config.rs  custom_commands.rs  floppa.rs  maintenance.rs  minecraft.rs  mod.rs  qa_data.rs  roles.rs  structure.rs  structures.rs
src/fandom/: mod.rs  structures.rs
