[package]
name = "lotr-mod-discord-bot"
version = "0.2.0"
authors = ["AldanTanneo <aldantanneo@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
serde_json = "1.0"
serde = "1.0"
reqwest = "0.11"
chrono = "0.4"
const_format = "0.2"

[dependencies.tokio]
version = "1.15"
features = [
    "macros", 
    "rt-multi-thread",
    "signal"
]

[dependencies.poise]
git = "https://github.com/kangalioo/poise"

[dependencies.sqlx]
version = "0.5"
features = [ "runtime-tokio-rustls", "mysql", "chrono" ]

[features]
default = []
noperms = []
