[package]
name = "lotr-mod-discord-bot"
version = "0.1.0"
authors = ["AldanTanneo <aldantanneo@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
bytesize = "1.1"
itertools = "0.10"
reqwest = "0.11"
serde_json = "1.0"
serde = "1.0"
rand = "0.8"
chrono = "0.4"
humantime-serde = "1.1"
dashmap = "5.2"
alea = "0.2"
serde_tuple = "0.5"
const_format = "0.2"

[dependencies.iso-8601]
git = "https://github.com/AldanTanneo/iso-8601"
features = ["chrono"]

[dependencies.mysql_async]
version = "0.29"

[dependencies.mysql_common]
version = "0.28"
features = [ "chrono" ]

[dependencies.tokio]
version = "1.17"
features = [
    "macros", 
    "rt-multi-thread",
    "signal"
]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache",
    "unstable_discord_api",
    "collector"
]
